...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...
                android:layout_marginBottom="50dp"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/settings_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/search_nav"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ScrollViewSize">
...

                    <TextView
                        android:id="@+id/bookevaluation_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/upcoming_valuations_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/awaiting_action"
                        android:layout_width="wrap_content"
                        android:layout_height="16dp"
...

                    <TextView
                        android:id="@+id/confirmed_viewings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/viewings_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/awaiting_feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/pending_recieved_feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/offers_awaiting_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/accepted_offers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

            <ImageView
                android:id="@+id/about_nav"
                android:layout_width="60dp"
                android:layout_height="60dp"
...

            <ImageView
                android:id="@+id/contact_nav"
                android:layout_width="60dp"
                android:layout_height="60dp"
...

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
