...
        <item>449</item>
        <item>450</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="facebook_app_id">762716624083080</string>
    <string name="fb_login_protocol_scheme">fb762716624083080</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="permission_error">You need to give permission to access files to use this feature</string>
...
    <string name="licenses">License</string>
    <string name="license_message">Icons used in this app are licensed under creative commons from the author Freepik.</string>
    <string name="no_feedback">You do not have any feedback awaiting action</string>
    <string name="no_pending_feedback">You do not have any pending or received feedback</string>
    <string name="ok_text">OK</string>
    <string name="maximum_images">You can only add a maximum of 15 pictures</string>
    <string name="close_button">Close</string>
    <string name="at_least_one_photo">You need to add at least one photo</string>
    <string name="enter_value_for">You need to enter a value for</string>
    <string name="saving_listing">Saving listing…please wait.</string>
    <string name="listing_saved">Listing saved!</string>
    <string name="error_saving_photo">Error saving photo</string>
    <string name="give_access">Grant access</string>
...
    <string name="hi">Hi %s</string>
    <string name="profile_text">Profile</string>
    <string name="update_profile_message">Please update your profile details before using this app</string>
    <string name="update_action">UPDATE</string>
    <string name="main_textview_text">The first registered real estate is worth</string>
    <string name="press_again_to_exit">Press once again to exit</string>
    <string name="database_sync_message">Synching with database…please wait</string>
    <string name="accepted_offers_title">Accepted Offers</string>
    <string name="no_accepted_offers">You do not have any accepted offers</string>
    <string name="offers_title">Offers</string>
    <string name="no_offers">You do not have offers awaiting action</string>
    <string name="search_results_title">Search Results</string>
    <string name="sort_dialog_title">Sort by</string>
...
    <string name="currency_symbol">£</string>
    <string name="asking_price_tv_value">Asking price :</string>
    <string name="offer">Offer :</string>
    <string name="submit_offer">Submit Offer</string>
    <string name="comments">Comments</string>
    <string name="sdsd">£</string>
    <string name="enter_offer_value">You need to enter an offer value</string>
    <string name="make_an_offer_response">Your offer has been sent to an agent and the seller. You will be contacted soon.</string>
    <string name="error_saving">Error saving listing. Try again</string>
    <string name="sync_errors">Sync completed with errors - check network speed</string>
    <string name="sync_completed">Sync completed</string>
    <string name="local_db_sync_message">Synching…</string>
    <string name="synching_with_firebase">Synching…</string>
    <string name="listings_remaining">listings remaining</string>
    <string name="editing_title">Editing</string>
    <string name="no_confirmed_viewings">You do not have any confirmed viewings</string>
    <string name="no_viewings_history">You do not have any viewings history</string>
    <string name="unknown_agent">Unknown agent</string>
    <string name="book_a_viewing_confirmation">Your viewing has been booked! An agent will be in contact soon</string>
    <string name="no_location">Could not find location. Is GPS/Internet available?</string>
    <string name="logout">Logout</string>
    <string name="manage_your_privacy_settings_to_control_how_we_can_contact_you_and_for_what_purpose">Manage your privacy settings to control how we can contact you and for what purpose</string>
    <string name="logout_of_your_real_estate_manager_account">Logout of your Real Estate Manager account</string>
    <string name="manage_the_personal_details_we_hold_for_you_such_as_name_address_and_contact_number">Manage the personal details we hold for you, such as name,address and contact number</string>
    <string name="logout_btn_text">Logout</string>
    <string name="return_btn_text">Return</string>
...
    <string name="status">Status</string>
    <string name="sale_status">sale status</string>
    <string name="post_code">Post code</string>
    <string name="name_number">Name/number</string>
    <string name="county">County</string>
    <string name="town_city">Town/City</string>
    <string name="points_of_interest">Points of interest</string>
    <string name="surface_area_m2">Surface area (m2)</string>
    <string name="save">Save</string>
    <string name="description_et">Description</string>
    <string name="buy">Buy</string>
    <string name="let">Let</string>
    <string name="add_image">Add image</string>
...
    <string name="sign_in_text">Sign in</string>
    <string name="new_or_existing_user">New or Existing user</string>
    <string name="reset_email_sent">Reset email send to\u0020\</string>
    <string name="password_reset_failed">Password reset failed :</string>
    <string name="sign_up_string">Sign up</string>
    <string name="sell_let_missing_vals">You must enter a value for each field</string>
    <string name="internet_required">An internet connection is required to use this feature</string>
    <string name="enter_email_reset_pass">Enter your email address to reset your password</string>
    <string name="email_address">Email address…</string>
    <string name="existing_user">Existing User</string>
    <string name="new_user">New User</string>
    <string name="password_text">Password</string>
    <string name="password_criteria">Passwords must be at least 8 characters long and contain one uppercase letter and one number.</string>
...
