...
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.robmillaci.realestatemanager.activities.main_activity.MainActivityView"
    tools:showIn="@layout/app_bar_main">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/geolocate_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@android:color/white"
        app:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_listing_fab"
        app:srcCompat="@drawable/geolocate_icon" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/sync_db_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
...
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@android:color/white"
        app:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_fab"
        app:srcCompat="@drawable/add_property" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/search_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
